--- a/XOindex.html
+++ b/XOindex.html
@@ -15,14 +15,13 @@
 <body>
     <header>
         <div class="title">
-            <h1>X O Game </h1>
+            <h1>X BUGS O Game </h1>
             <h3>by Nora Alkhunifer </h3>
         </div>
         <div class="pause">
             <!-- <img />
-        <img/> -->
-            <i class='fas fa-font' style='font-size:48px;color:black'></i>
-            <i class='fas fa-pause' style='font-size:48px;color:green'></i>
+        <img/> fas fa-bug	-->
+            <i class='fas fa-home' style='font-size:48px;color:black'></i>
         </div>
     </header>
     <div class="game-header">
