--- a/XOindex.html
+++ b/XOindex.html
@@ -10,6 +10,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
         integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+        <link rel="stylesheet" type="text/css" href="csshake.min.css">
+<!-- or from surge.sh -->
+<link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </head>
 
 <body>
@@ -21,7 +26,7 @@
         <div class="pause">
             <!-- <img />
         <img/> fas fa-bug	-->
-            <i class='fas fa-home' style='font-size:48px;color:black'></i>
+            <i onClick="goHome()" class='fas fa-home' style='font-size:48px;color:black'></i>
         </div>
     </header>
     <div class="game-header">
@@ -53,7 +58,7 @@
                             <td class="cell" id="8"></td>
                         </tr>
                     </table>
-                    <div class="dialog">
+                    <div class="dialog shake-slow" >
                         <p class="message"></p>
                             <button onClick="startGame()">Replay</button>
                     </div>
