--- a/XOindex.html
+++ b/XOindex.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
         integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
-    <link rel="stylesheet" type="text/css" href="csshake.min.css">
+    <link rel="stylesheet" type="text/css" href="csshake-slow.css">
     <link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
@@ -25,17 +25,16 @@
         <div class="pause">
             <!-- <img />
         <img/> fas fa-bug	-->
-            <i onClick="goHome()" class='fas fa-home' style='font-size:48px;color:black'></i>
+            <i onClick="goHome()" class='fas fa-home' style='font-size:48px;color:rgb(30, 83, 17)'></i>
         </div>
     </header>
 
     <div class="container">
         <div class="player1">
             <h2 id="player1name" class="player-name">player 1 name </h2>
-            <p class="player-score">Wins
+            <p class="player-score"> Win Turnes: 
                     <span id="player1Score">0</span>
-                    Turnes
-                    <i class='fas fa-bug' style='font-size:20px;color:black'></i>
+                    <i class='fas fa-bug' style='font-size:20px;color:rgb(30, 83, 17)'></i>
 
                 </p>
         </div>
@@ -65,10 +64,9 @@
         </div>
         <div class="player2">
             <h2 id="player2name" class="player-name">player 2 name </h2>
-            <p class="player-score">Wins
+            <p class="player-score">Win Turnes: 
                 <span id="player2Score"></span>
-                Turnes
-                <i class='fas fa-bug' style='font-size:20px;color:black'></i>
+                <i class='fas fa-bug' style='font-size:20px;color:rgb(30, 83, 17)'></i>
 
             </p>
 
