--- a/home.html
+++ b/home.html
@@ -1,17 +1,57 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="home.css">
-    <script src="home.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
+        integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+    <link rel="stylesheet" type="text/css" href="csshake-slow.css">
+    <link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </head>
+
 <body>
     <header>
+        <div class="title">
+            <h1>X BUGS O Game </h1>
+            <h3>by Nora Alkhunifer </h3>
+        </div>
+        <div class="pause">
 
+        </div>
     </header>
-    
+
+    <div class="container">
+        <div class="buttons-list">
+            <button onClick="withAI()">
+                Play with Robotic Bug
+                <i class='fas fa-bug' style='font-size:20px;color:rgb(30, 83, 17)'></i>
+            </button>
+            <button onClick="withLocalFriend()">
+                Play with Local Friend
+                <i class='fas fa-bug' style='font-size:20px;color:rgb(30, 83, 17)'></i>
+            </button>
+            <button onClick="withOnlineFriend()">
+                Play with Online Friend
+                <i class='fas fa-bug' style='font-size:20px;color:rgb(30, 83, 17)'></i>
+            </button>
+        </div>
+        <div class="winersBoard">
+
+        </div>
+    </div>
+
+    <footer>
+
+    </footer>
+    <script src="home.js"></script>
+
 </body>
+
 </html>
