--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="csshake-slow.css">
     <link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
+    <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script> -->
 </head>
 
 <body>
