i forgate the readme + i change the index page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
 
-
+<button onclick="gotorealgame()">go to real game </button>
     </div>
     <script src="main.js"></script>
 
